--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>placeholder</title>
 </head>
+
 <body>
-    
+    <header>
+        <img src="https://via.placeholder.com/150" alt="Placeholder Image" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <main>
+            <h1>Basic HTML Structure</h1>
+            <section>
+                <h2>heading 1</h2>
+                <p> Placeholder content for the first section.
+                <section>
+                    <h3>heading 2</h3>
+                    <p> Placeholder content for the second section.</p>
+                </section>
+                </p>
+            </section>
+            <aside>
+                <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/800x500/aba-nigeria-temple-lds-1636397-wallpaper.jpgalt="
+                    Aside Image" width="200">
+            </aside>
+            <footer>
+                <p>Generous Lennox.</p>
+
 </body>
+
 </html>
