--- a/index.html
+++ b/index.html
@@ -12,30 +12,35 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr">Lennox website</a>
+            <a href="wwr/index.html">Lennox website</a>
         </nav>
     </header>
     <main>
+
         <h1>Generous Lennox | WDD 130.</h1>
 
-        <img src="https://s.yimg.com/ny/api/res/1.2/nJXh66zbnpYecnWbFu06Nw--/YXBwaWQ9aGlnaGxhbmRlcjt3PTk2MDtoPTY0MDtjZj13ZWJw/https://media.zenfs.com/en/onefootball_articles_802/cf1b493501042865848a0c672c25d7d3"
-            alt="Generous Lennox" width="100">
-        <p>The lennox Store</p>Hi, I'm Generous Lennox, a student at BYU-Idaho studying Web Development and Design. I
-        have a passion for creating beautiful and functional websites that provide an excellent user experience. In my
-        free time, I enjoy hiking, photography, and exploring new technologies in web development.</p>
+        <img src="images/generous-lennox.jpg" alt="Generous Lennox" width="100">
+        <p><strong>The Lennox Store</strong></p>
+        <p> Hi, I'm Generous Lennox, a student at BYU-Idaho studying Web Development and Design. I
+            have a passion for creating beautiful and functional websites that provide an excellent user experience. In
+            my
+            free time, I enjoy hiking, photography, and exploring new technologies in web development.</p>
         <p>Feel free to explore my personal homepage to learn more about me, my projects, and my interests. If you have
             any questions or would like to connect, don't hesitate to reach out!</p>
 
         <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
         <ul>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple"
-                    target="_blank">Philadelphia Pennsylvania Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Paris
-                    France Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Berlin
-                    Germany Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
+                    Nigeria Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake
+                    Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra
+                    Ghana Temple</a></li>
         </ul>
     </main>
+    <footer>
+        <p>&copy; 2025 Generous Lennox</p>
+    </footer>
 </body>
 
 </html>
