--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | Personal Homepage</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,6 +16,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/index.html">Lennox website</a>
+            <a href="https://linkedin.com/in/generouslennox">Profile</a>
         </nav>
     </header>
     <main>
@@ -29,7 +33,7 @@
             any questions or would like to connect, don't hesitate to reach out!</p>
 
         <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
-        <ul>
+        <ul class="box indent">
             <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
                     Nigeria Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake
@@ -37,6 +41,12 @@
             <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra
                     Ghana Temple</a></li>
         </ul>
+        <aside class="" box">
+            <h2>Milton Keynes</h2>
+            <img src="images/Milton-keynes.jpg" alt="Milton Keynes Cityscape" width="150">
+            <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
+
+        </aside>
     </main>
     <footer>
         <p>&copy; 2025 Generous Lennox</p>
