--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h1>Generous Lennox | WDD 130.</h1>
 
-        <img src="images/generous-lennox.jpg" alt="Generous Lennox" width="100">
+        <img src="images/generous-lennox.jpg" alt="Generous Lennox" width="150">
         <p><strong>The Lennox Store</strong></p>
         <p> Hi, I'm Generous Lennox, a student at BYU-Idaho studying Web Development and Design. I
             have a passion for creating beautiful and functional websites that provide an excellent user experience. In
@@ -41,7 +41,7 @@
             <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra
                     Ghana Temple</a></li>
         </ul>
-        <aside class="" box">
+        <aside class="box">
             <h2>Milton Keynes</h2>
             <img src="images/Milton-keynes.jpg" alt="Milton Keynes Cityscape" width="150">
             <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
