--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Generous Lennox">
+    <meta name="description"
+        content="personal homepage of Generous Lennox, student at BYU-Idaho studying Web Development and Design">
     <title>WDD 130 | Personal Homepage</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,13 +44,14 @@
             <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra
                     Ghana Temple</a></li>
         </ul>
-        <aside class="box">
-            <h2>Milton Keynes</h2>
-            <img src="images/Milton-keynes.jpg" alt="Milton Keynes Cityscape" width="150">
-            <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
-
-        </aside>
     </main>
+
+    <aside class="box">
+        <h2>Milton Keynes</h2>
+        <img src="images/Milton-keynes.jpg" alt="Milton Keynes Cityscape" width="150">
+        <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
+
+    </aside>
     <footer>
         <p>&copy; 2025 Generous Lennox</p>
     </footer>
