--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <aside class="box">
         <h2>Milton Keynes</h2>
-        <img src="images/Milton-keynes.jpg" alt="Milton Keynes Cityscape" width="150">
+        <img src="images/milton-keynes.jpg" alt="Milton Keynes Cityscape" width="150">
         <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
 
     </aside>
