--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 
     <aside class="box">
         <h2>Milton Keynes</h2>
-        <img src="images/milton-keynes.jpg" alt="Milton Keynes Cityscape" width="150">
+        <img src="images/milton-keynes2.jpg" alt="Milton Keynes Cityscape" width="150">
         <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
+
 
 
     </aside>
@@ -59,6 +60,8 @@
     <footer>
 
         <p>&copy; 2025 Generous Lennox</p>
+
+
     </footer>
 </body>
 
