--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h1>Generous Lennox | WDD 130.</h1>
 
-        <img src="images/profile.jpg" alt="Generous Lennox" class="profile">
+        <img src="images/profile.jpg" alt="Generous Lennox" width="200">
         <p><strong>The Lennox Store</strong></p>
         <p> Hi, I'm Generous Lennox, a student at BYU-Idaho studying Web Development and Design. I
             have a passion for creating beautiful and functional websites that provide an excellent user experience. In
