--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,55 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Company</title>
+    <meta name="description"
+        content="Learn more about Rafting Company — our history, mission, and passion for creating unforgettable whitewater rafting adventures.">
+    <meta name="author" content="Generous Lennox">
+    <title>About Us – Rafting Company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
-
 <body>
-    <div class="header">
-        <div class="logo">
-            <img src="images/logo.png" alt="Rafting Company Logo">
-        </div>
+
+    <!-- HEADER SECTION -->
+    <header>
+        <img src="images/logo.png" alt="Rafting Company Logo">
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="#">Trips</a></li>
-                <li><a href="contact.html">Contact us</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
-    </div>
+    </header>
 
-    <div class="hero">
-        <img src="images/nice.jpg" alt="Rafting Adventure" />
-    </div>
+    <!-- MAIN SECTION -->
+    <main>
+        <div class="hero">
+            <img src="images/nice.jpg" alt="Rafting Adventure">
+        </div>
 
-    <div class="history">
-        <h2>History</h2>
-        <p>I, the undersigned, understand that participation in rafting activities involves inherent risks and dangers.
-            I acknowledge that I have read and understood the safety guidelines provided by the rafting company.</p>
-    </div>
+        <section class="history">
+            <h2>History</h2>
+            <p>I, the undersigned, understand that participation in rafting activities involves inherent risks and
+                dangers.
+                I acknowledge that I have read and understood the safety guidelines provided by the rafting company.</p>
+        </section>
 
-    <div class="adventure">
-        <h2>Adventure Awaits You</h2>
-        <p>Ride the Rapids, Live the Adventure!
-            At rafting company, we don’t just offer rafting trips — we deliver unforgettable journeys through roaring
-            rivers,
-            breathtaking landscapes, and adrenaline-pumping rapids. Whether you’re a first-timer or a thrill-seeker, our
-            expert
-            guides ensure every splash, drop, and twist is packed with excitement and safety. The river is calling — are
-            you ready
-            to answer?</p>
-    </div>
+        <section class="adventure">
+            <h2>Adventure Awaits You</h2>
+            <p>Ride the Rapids, Live the Adventure! At Rafting Company, we don’t just offer rafting trips — we deliver
+                unforgettable journeys through roaring rivers, breathtaking landscapes, and adrenaline-pumping rapids.
+                Whether you’re a first-timer or a thrill-seeker, our expert guides ensure every splash, drop, and twist
+                is
+                packed with excitement and safety. The river is calling — are you ready to answer?</p>
+        </section>
+    </main>
+
 
     <footer>
+        <p>© 2025 Rafting Company | Created by Generous Lennox</p>
         <div class="social-media-icons">
             <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
             <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
         </div>
     </footer>
+
 </body>
 
 </html>
