--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,6 +24,8 @@
     </header>
 
     <main>
+        <h1>Rafting Company</h1>
+
         <div class="hero">
             <img src="images/nice.jpg" alt="Rafting Adventure">
         </div>
@@ -49,11 +51,18 @@
     <footer>
         <p>© 2025 Rafting Company | Created by Generous Lennox</p>
         <div class="social-media-icons">
-            <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="Facebook">
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="Twitter">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
         </div>
     </footer>
+
 
 </body>
 
