--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,37 +14,39 @@
 <body>
 
     <header>
-        <img src="images/logo.png" alt="Rafting Company Logo">
+        <img src="images/logo1.jpeg" alt="Rafting Company Logo">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </nav>
+
     </header>
 
     <main>
-        <h1>Rafting Company</h1>
-
-
         <div class="hero">
-            <img src="images/nice.jpg" alt="Rafting Adventure">
+            <img src="images/splash.jpg" alt="Rafting Adventure">
+            <h1>Hey,Let's make memories!</h1>
+
+            <p2 class="hero-bottom-text">Ride the Rapids, Live the Adventure! At Rafting Company, we don’t just offer
+                rafting trips — we deliver
+                unforgettable journeys through roaring rivers, breathtaking landscapes, and adrenaline-pumping rapids.
+                Whether you’re a first-timer or a thrill-seeker.</p2>
         </div>
 
         <section class="history">
             <h2>History</h2>
-            <p>I, the undersigned, understand that participation in rafting activities involves inherent risks and
+            <p1>I, the undersigned, understand that participation in rafting activities involves inherent risks and
                 dangers.
                 I acknowledge that I have read and understood the safety guidelines provided by the rafting company.</p>
         </section>
 
         <section class="adventure">
-            <h2>Adventure Awaits You</h2>
-            <p>Ride the Rapids, Live the Adventure! At Rafting Company, we don’t just offer rafting trips — we deliver
-                unforgettable journeys through roaring rivers, breathtaking landscapes, and adrenaline-pumping rapids.
-                Whether you’re a first-timer or a thrill-seeker, our expert guides ensure every splash, drop, and twist
-                is
-                packed with excitement and safety. The river is calling — are you ready to answer?</p>
+            <h3>Adventure Awaits You</h3>
+
         </section>
     </main>
 
