--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,21 +31,21 @@
             <img src="images/splash.jpg" alt="Rafting Adventure">
             <h1>Hey,Let's make memories!</h1>
 
-            <p2 class="hero-bottom-text">Ride the Rapids, Live the Adventure! At Rafting Company, we don’t just offer
+            <p class="hero-bottom-text">Ride the Rapids, Live the Adventure! At Rafting Company, we don’t just offer
                 rafting trips — we deliver
                 unforgettable journeys through roaring rivers, breathtaking landscapes, and adrenaline-pumping rapids.
-                Whether you’re a first-timer or a thrill-seeker.</p2>
+                Whether you’re a first-timer or a thrill-seeker</p>
         </div>
 
         <section class="history">
             <h2>History</h2>
-            <p1>I, the undersigned, understand that participation in rafting activities involves inherent risks and
+            <p>I, the undersigned, understand that participation in rafting activities involves inherent risks and
                 dangers.
                 I acknowledge that I have read and understood the safety guidelines provided by the rafting company.</p>
         </section>
 
         <section class="adventure">
-            <h3>Adventure Awaits You</h3>
+            <h2>Adventure Awaits You</h2>
 
         </section>
     </main>
