--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,6 +39,7 @@
                 Whether you’re a first-timer or a thrill-seeker <img src="images/splash.jpg" alt="Small rafting"
                     class="hero-thumb"> </p>
         </div>
+        </div>
         <section class="history">
             <h2>History</h2>
             <p>I, the undersigned, understand that participation in rafting activities involves inherent risks and
