--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Generous Lennox">
     <meta name="description"
-        content="personal homepage of Generous Lennox, student at BYU-Idaho studying Web Development and Design">
+        content="Personal homepage of Generous Lennox, student at BYU-Idaho studying Web Development and Design.">
     <title>WDD 130 | Personal Homepage</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,54 +14,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/index.html">Lennox website</a>
-            <a href="https://linkedin.com/in/generouslennox">Profile</a>
+            <a href="wwr/index.html">Lennox Website</a>
+            <a href="https://www.linkedin.com/in/generous-lennox-4bb216267" target="_blank">LinkedIn</a>
         </nav>
     </header>
-    <main>
 
-        <h1>Generous Lennox | WDD 130.</h1>
+    <!-- Grid layout for main + aside -->
+    <div class="grid">
+        <main>
+            <h1>Generous Lennox | WDD 130</h1>
 
-        <img src="images/profile.jpg" alt="Generous Lennox" width="200">
-        <p><strong>The Lennox Store</strong></p>
-        <p> Hi, I'm Generous Lennox, a student at BYU-Idaho studying Web Development and Design. I
-            have a passion for creating beautiful and functional websites that provide an excellent user experience. In
-            my
-            free time, I enjoy hiking, photography, and exploring new technologies in web development.</p>
-        <p>Feel free to explore my personal homepage to learn more about me, my projects, and my interests. If you have
-            any questions or would like to connect, don't hesitate to reach out!</p>
+            <img src="images/profile.jpg" alt="Generous Lennox" width="200">
+            <p><strong>The Lennox Store</strong></p>
 
-        <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
-                    Nigeria Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake
-                    Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra
-                    Ghana Temple</a></li>
-        </ul>
+            <p>Hi, I'm Generous Lennox, a student at BYU-Idaho studying Web Development and Design.
+                I have a passion for creating beautiful and functional websites that provide excellent user experiences.
+                In my free time, I enjoy hiking, photography, and exploring new technologies in web development.
+            </p>
 
-    </main>
+            <p>Feel free to explore my personal homepage to learn more about me, my projects, and my interests.
+                If you have any questions or would like to connect, don't hesitate to reach out!
+            </p>
 
-    <aside class="box">
-        <h2>Milton Keynes</h2>
-        <img src="images/milton-keynes2.jpg" alt="Milton Keynes Cityscape" width="150">
-        <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
+            <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
 
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba
+                        Nigeria Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt
+                        Lake Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple"
+                        target="_blank">Accra Ghana Temple</a></li>
+            </ul>
+        </main>
 
-
-    </aside>
+        <aside class="box">
+            <h2>Milton Keynes</h2>
+            <img src="images/milton-keynes2.jpg" alt="Milton Keynes Cityscape" width="150">
+            <p>My favorite city is Milton Keynes. It is known for its modern architecture and green spaces.</p>
+        </aside>
+    </div>
 
     <footer>
-
         <p>&copy; 2025 Generous Lennox</p>
-
-
     </footer>
 </body>
 
