--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,72 +4,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Learn more about Rafting Company — our history, mission, and passion for creating unforgettable whitewater rafting adventures.">
-    <meta name="author" content="Generous Lennox">
-    <title>About Us – Rafting Company</title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <title>Rafting Company | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 
     <header>
-        <img src="images/logo1.jpeg" alt="Rafting Company Logo">
+        <img src="images/logo.png" alt="Rafting Company Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-
     </header>
 
-    <main>
-        <div class="hero">
-            <img src="images/splash.jpg" alt="Rafting Adventure">
-            <h1>Hey,Let's make memories!</h1>
+    <div class="grid">
+        <main>
+            <section class="hero">
+                <img src="images/splash.jpg" alt="Rafting Adventure" class="hero-img">
+                <h1>Hey, Let’s Make Memories!</h1>
+                <p class="hero-text">
+                    Ride the Rapids, Live the Adventure! At Rafting Company, we don’t just offer rafting trips —
+                    we deliver unforgettable journeys through roaring rivers and breathtaking landscapes.
+                </p>
+            </section>
 
+            <section class="history">
+                <h2>History</h2>
+                <div class="history-content">
+                    <img src="images/history.jpg" alt="Rafting History">
+                    <p>
+                        Our company began with a passion for adventure and a love for the outdoors.
+                        From our humble beginnings to now, we’ve guided thousands of rafters through
+                        thrilling river experiences with safety, skill, and excitement.
+                    </p>
+                </div>
+            </section>
 
-            <p class="hero-bottom-text">Ride the Rapids, Live the Adventure! At Rafting Company, we don’t just offer
-                rafting trips — we deliver
-                unforgettable journeys through roaring rivers, breathtaking landscapes, and adrenaline-pumping
-                rapids.
-                Whether you’re a first-timer or a thrill-seeker <img src="images/splash.jpg" alt="Small rafting"
-                    class="hero-thumb"> </p>
+            <section class="adventure">
+                <h2>Adventure Awaits You!</h2>
+                <div class="adventure-gallery">
+                    <figure>
+                        <img src="images/bird.jpg" alt="Los Dientes del Diablo">
+                        <figcaption>Los Dientes del Diablo</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/seabird.jpg" alt="Big Mallard">
+                        <figcaption>Big Mallard</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/shoes.jpg" alt="Half Day Adventure">
+                        <figcaption>Half Day Adventure</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/nice.jpg" alt="Rapid Rush">
+                        <figcaption>Rapid Rush</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/streetlight.jpg" alt="Sunset Rapids">
+                        <figcaption>Sunset Rapids</figcaption>
+                    </figure>
+                </div>
+            </section>
+        </main>
 
-        </div>
-        <section class="history">
-            <h2>History</h2>
-            <p>I, the undersigned, understand that participation in rafting activities involves inherent risks and
-                dangers.
-                I acknowledge that I have read and understood the safety guidelines provided by the rafting company.
+        <aside>
+            <h2>Contact Us</h2>
+            <p>Email: info@raftingcompany.com</p>
+            <p>Phone: +44 123 456 789</p>
+            <p>Follow us on LinkedIn:
+                <a href="https://www.linkedin.com/in/generous-lennox-4bb216267" target="_blank">
+                    Generous Lennox
+                </a>
             </p>
-        </section>
-
-        <section class="adventure">
-            <h2>Adventure Awaits You</h2>
-
-        </section>
-    </main>
-
+        </aside>
+    </div>
 
     <footer>
-        <p>© 2025 Rafting Company | Created by Generous Lennox</p>
-        <div class="social-media-icons">
-            <a href="https://www.facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="Facebook">
-            </a>
-            <a href="https://www.twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="Twitter">
-            </a>
-            <a href="https://www.instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
-        </div>
+        <p>&copy; 2025 Rafting Company | Designed by Generous Lennox</p>
     </footer>
-
 
 </body>
 
