--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
         content="Learn more about Rafting Company — our history, mission, and passion for creating unforgettable whitewater rafting adventures.">
     <meta name="author" content="Generous Lennox">
     <title>About Us – Rafting Company</title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
