--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,11 +43,21 @@
         </div>
         <section class="history">
             <h2>History</h2>
-            <p>I, the undersigned, understand that participation in rafting activities involves inherent risks and
-                dangers.
-                I acknowledge that I have read and understood the safety guidelines provided by the rafting company.
-            </p>
+            <div class="history">
+
+                <p>
+                    Our rafting company began with a simple dream — to bring the thrill of
+                    whitewater adventure to everyone. Over the years, we’ve built a community
+                    of passionate rafters who share our love for the river.</p>
+                <img src="images/logo1.jpeg" alt="Rafting history image">
+
+                </p> Today, we continue
+                that tradition with professional guides, top-tier safety standards, and
+                unforgettable experiences that connect people with nature and adventure.
+                </p>
+            </div>
         </section>
+
 
         <section class="adventure">
             <h2>Adventure Awaits You</h2>
