--- a/wwr/about.html
+++ b/wwr/about.html
@@ -61,6 +61,34 @@
 
         <section class="adventure">
             <h2>Adventure Awaits You</h2>
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/bird.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/nice.jpg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/shoes.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/seabird.jpg" alt="The Wild Rapids">
+                    <figcaption>The Wild Rapids</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/streetlight.jpg" alt="Thunder Run">
+                    <figcaption>Thunder Run</figcaption>
+                </figure>
+
+
+
+            </div>
 
         </section>
     </main>
