--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,19 +44,22 @@
         <section class="history">
             <h2>History</h2>
             <div class="history">
-
                 <p>
                     Our rafting company began with a simple dream — to bring the thrill of
                     whitewater adventure to everyone. Over the years, we’ve built a community
-                    of passionate rafters who share our love for the river.</p>
+                    of passionate rafters who share our love for the river.
+                </p>
+
                 <img src="images/logo1.jpeg" alt="Rafting history image">
 
-                </p> Today, we continue
-                that tradition with professional guides, top-tier safety standards, and
-                unforgettable experiences that connect people with nature and adventure.
+                <p>
+                    Today, we continue that tradition with professional guides, top-tier
+                    safety standards, and unforgettable experiences that connect people with
+                    nature and adventure.
                 </p>
             </div>
         </section>
+
 
 
         <section class="adventure">
