--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,7 +37,7 @@
                 rafting trips — we deliver
                 unforgettable journeys through roaring rivers, breathtaking landscapes, and adrenaline-pumping
                 rapids.
-                Whether you’re a first-timer or a thrill-seeker <img src="images/splash.jpg" alt="Small rafting"
+                Whether you’re a first-timer or a thrill-seeker <img src="images/pen.jpg" alt="Small rafting"
                     class="hero-thumb"> </p>
 
         </div>
@@ -66,26 +66,26 @@
             <h2>Adventure Awaits You</h2>
             <div class="adventure-gallery">
                 <figure>
-                    <img src="images/bird.jpg" alt="Los Dientes del Diablo">
+                    <img src="images/adventure.jpg" alt="Los Dientes del Diablo">
                     <figcaption>Los Dientes del Diablo</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/nice.jpg" alt="Big Mallard">
+                    <img src="images/drill.jpg" alt="Big Mallard">
                     <figcaption>Big Mallard</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/shoes.jpg" alt="Half Day Adventure">
+                    <img src="images/dell.jpg" alt="Half Day Adventure">
                     <figcaption>Half Day Adventure</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/seabird.jpg" alt="The Wild Rapids">
+                    <img src="images/boat.jpg" alt="The Wild Rapids">
                     <figcaption>The Wild Rapids</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/streetlight.jpg" alt="Thunder Run">
+                    <img src="images/rafting.jpg" alt="Thunder Run">
                     <figcaption>Thunder Run</figcaption>
                 </figure>
 
@@ -101,13 +101,13 @@
         <p>© 2025 Rafting Company | Created by Generous Lennox</p>
         <div class="social-media-icons">
             <a href="https://www.facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="Facebook">
+                <img src="images/facebook.png" alt="Follow Rafting Company on Facebook">
             </a>
             <a href="https://www.twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="Twitter">
+                <img src="images/twitter.png" alt="Follow Rafting Company on Twitter">
             </a>
             <a href="https://www.instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
+                <img src="images/instagram.png" alt="Follow Rafting Company on Instagram">
             </a>
         </div>
     </footer>
