--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/index.html">Lennox Website</a>
+            <a href="wwr/index.html">Rafting Website</a>
             <a href="https://www.linkedin.com/in/generous-lennox-4bb216267" target="_blank">LinkedIn</a>
         </nav>
     </header>
@@ -60,7 +60,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Generous Lennox</p>
+        <p>&copy; 2026 Generous Lennox</p>
     </footer>
 </body>
 
